# dia-oracle-anchor

./: .dockerignore  .env  .env.sample  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc.js  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  tsconfig.json
.github/workflows/: rust.yml
bot/: README.md  app.ts  container.ts  server.ts
bot/config/: constants.ts  environments.ts  index.ts  status.code.ts
bot/config/contracts/: price.oracle.ts  randomness.oracle.ts
bot/core/: ApiError.ts  Logger.ts
bot/core/exceptions/: application.exception.ts  biz.exception.ts  request.exception.ts
bot/core/lang/errors/: common.ts  index.ts
bot/core/middlewares/: exception.middleware.ts  request.middleware.ts
bot/db/: pg.ts
bot/helpers/: asyncHandler.ts  toPaginate.ts  utility.ts
bot/modules/oracle/: oracle.controller.ts  oracle.d.ts  oracle.indexer.ts  oracle.repository.ts  oracle.router.ts  oracle.service.ts
bot/modules/oracle/models/: oracle.pg.ts
bot/modules/site/: site.controller.ts  site.router.ts
bot/modules/system/: system.indexer.ts  system.service.ts
bot/providers/: external.ts  job.ts  lock.ts  notification.ts  redis.ts
bot/providers/blockchain/: aleph.ts
bot/templates/: task-run-failed.html
bot/types/: base.d.ts  request.d.ts
contracts/: lib.rs
contracts/oracle/: Cargo.toml  lib.rs
contracts/oracle-getter/: Cargo.toml
contracts/oracle-random/: Cargo.toml  lib.rs
contracts/oracle-random-getter/: Cargo.toml  lib.rs
contracts/oracle-random-setter/: Cargo.toml  lib.rs
contracts/oracle-random-type/: Cargo.toml  lib.rs
contracts/oracle-randomness/: Cargo.toml  lib.rs
contracts/oracle-randomness-getter/: Cargo.toml  lib.rs
contracts/oracle-randomness-setter/: Cargo.toml  lib.rs
contracts/oracle-randomness-type/: Cargo.toml  lib.rs
contracts/oracle-setter/: Cargo.toml  lib.rs
example/: Cargo.toml  dia_oracle.json  example.rs
example-random-oracle/: Cargo.toml  example.rs
example-randomness-oracle/: Cargo.toml  dia_randomness_oracle.json  example.rs
prisma/: schema.prisma
prisma/migrations/20230630071615_init/: migration.sql
prisma/migrations/20230630092849_init/: migration.sql
prisma/migrations/20230630094557_init/: migration.sql
