[workspace]
members = [
    "contracts/oracle",
    "contracts/oracle-getter",
    "contracts/oracle-setter",
    "contracts/oracle-random",
    "contracts/oracle-random-getter",
    "contracts/oracle-random-setter",
    "contracts/oracle-random-type",

]

exclude = ["example/","example-random-oracle/"]
