[workspace]
members = [
    "contracts/oracle",
    "contracts/oracle-getter",
    "contracts/oracle-setter",
    "contracts/oracle-randomness-type",
    "contracts/oracle-randomness",
    "contracts/oracle-randomness-getter",
    "contracts/oracle-randomness-setter",
]

exclude = ["example/","example-randomness-oracle/"]
