[package]
name = "dia-oracle-example-random"
version = "0.1.0"
edition = "2021"
authors = ["nitin.gurbani@diadata.org"]


[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

 dia-oracle-random-getter = { path = "../contracts/oracle-random-getter", default-features = false }
 dia-oracle-random-type = { path = "../contracts/oracle-random-type", default-features = false }

 




[dev-dependencies]
ink_e2e = "4.3.0"
dia-random-oracle = { path = "../contracts/oracle-random", default-features = false }
dia-oracle-random-setter = { path = "../contracts/oracle-random-setter", default-features = false }

[lib]
path = "example.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std",  "dia-oracle-random-getter/std","dia-oracle-random-type/std"]
ink-as-dependency = []
e2e-tests = []
