[package]
name = "dia-oracle-example-randomness"
version = "0.1.0"
edition = "2021"
authors = ["nitin.gurbani@diadata.org"]


[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

 dia-oracle-randomness-getter = { path = "../contracts/oracle-randomness-getter", default-features = false }
 dia-oracle-randomness-type = { path = "../contracts/oracle-randomness-type", default-features = false }

 




[dev-dependencies]
ink_e2e = "4.3.0"
dia-randomness-oracle = { path = "../contracts/oracle-randomness", default-features = false }
dia-oracle-randomness-setter = { path = "../contracts/oracle-randomness-setter", default-features = false }

[lib]
path = "example.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std",  "dia-oracle-randomness-getter/std","dia-oracle-randomness-type/std"]
ink-as-dependency = []
e2e-tests = []
