[package]
name = "dia-random-oracle"
version = "0.1.0"
authors = ["nnn-gif nitin.gurbani@diadata.org"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }

dia-oracle-random-getter = { path = "../oracle-random-getter", default-features = false }
dia-oracle-random-setter = { path = "../oracle-random-setter", default-features = false }
dia-oracle-random-type = { path = "../oracle-random-type", default-features = false }



[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std","dia-oracle-random-type/std"]
ink-as-dependency = []
e2e-tests = []
